--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic Layout | Gage Carter</title>
+    <title>Basic Layout | Gage Carter | WDD 131</title>
     <link rel="stylesheet" href="styles/layout.css">
 </head>
 <body>
     <header>
         <h1>Header Content</h1>
         <nav>
-            <h2>Home</h2>
-            <h2>Projects</h2>
-            <h2>Services</h2>
-            <h2>Contact Us</h2>
+            <a href="#" target="_blank">Home</a>
+            <a href="#" target="_blank">Projects</a>
+            <a href="#" target="_blank">Services</a>
+            <a href="#" target="_blank">Contact Us</a>
         </nav>
     </header>
     <main>
