--- a/index.html
+++ b/index.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gage Carter WDD 131</title>
+    <title>WDD 131 - Dynamic Web Fundamentals - Gage Carter</title>
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals | Gage Carter | Introduction">
+    <meta name="author" content="Gage Carter">
+    <link rel="stylesheet" href="styles/base.css">
+    <script defer src="scripts/getdates.js"></script>
 </head>
 <body>
-    
+    <header>
+        <h1>WDD 131: Dynamic Web Fundamentals - Gage Carter</h1>
+        <nav class="links header-links">
+            <a href="https://www.linkedin.com/in/gage-carter-ba7b42227/" target="_blank">LinkedIn</a>
+            <a href="https://byui.instructure.com/" target="_blank">I-learn</a>
+            <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/8?lang=eng" target="_blank">Scripture</a>
+            <a href="#" target="_blank">Final Project</a>
+        </nav>
+    </header>
+    <main class="content">
+        <section class="card card1">
+            <h2>About me</h2>
+            <p class="intro">My name is gage Carter. I was born and raised in Mesa Arizona for my whole life, up until march of 2024. Me and my wife decided to move across the country to Charlotte, North Carolina, to be closer to my wifes family, who had also only recently moved to Charlotte as well. I absolutely love CAD design and am beginning to grow fond of the programming classes that I am taking as well. I love to be outdoors whenever possible, especially in a camping setting. I am excited to see what new things I can learn in this class!</p>
+            <img class="profile" src="images/profile.jpg" alt="Me and my Lovely Wife">
+            <h1>Charlotte, North Carolina</h1>
+            <p class="charlotte">In the last few years, Charlotte has grown considerably, and is now a widely known center of technology as well as arts and culture. Home to many large corporate buildings in the bustling city center, as well as the famous Bank Of America Staduim. Charlotte also boasts the very popular Charlotte motor speedway, hosting all kinds of races and courses to watch.</p>
+            <img class="city" src="images/charlotte.jpg" alt="Downtown Charlotte">
+        </section>
+        <section class="card card2">
+            <h2>Web Dev Resources</h2>
+            <nav class="links link-card">
+                <a href="https://www.w3schools.com/" target="_blank">W3 Schools</a>
+                <a href="https://github.com/" target="_blank">Github</a>
+                <a href="https://library.byui.edu/" target="_blank">BYU-I Library</a>
+            </nav>
+        </section>
+    </main>
+    <footer>
+        <p>&copy;<span id="currentyear"></span>Gage Carter - Charlotte, North Carolina, USA</p>
+        <p id="lastModified"></p>
+    </footer>
 </body>
 </html>
