--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>WDD 131: Dynamic Web Fundamentals - Gage Carter</h1>
+        <h1>WDD 131 - Dynamic Web Fundamentals - Gage Carter</h1>
         <nav class="links header-links">
             <a href="https://www.linkedin.com/in/gage-carter-ba7b42227/" target="_blank">LinkedIn</a>
             <a href="https://byui.instructure.com/" target="_blank">I-learn</a>
