--- a/week02/bom.html
+++ b/week02/bom.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Of Mormon</title>
+    <link rel='stylesheet' href="styles/bom.css">
 </head>
 <body>
+    <header>
+
     <h1>📖 Book of Mormon - Top 10</h1>
-<main>
-	<label for="favchap">Enter Book and Chapter: </label>
-	<input type="text" id="favchap" placeholder="Alma 5">
-	<button type="submit">Add Chapter</button>
-	<ul id="list"></ul>
-</main>
+
+    </header>
+    <main>
+	    <label for="favchap">Enter Book and Chapter: </label>
+	    <input type="text" id="favchap" placeholder="Alma 5">
+	    <button type="submit">Add Chapter</button>
+	    <ul id="list"></ul>
+    </main>
+    <footer></footer>
+    <script src="scripts/bom.js"></script>
 </body>
 </html>
