place website finished

--- a/place.html
+++ b/place.html
@@ -28,23 +28,23 @@
 
         <section id="data-list" class="container">
             <h2>Data</h2>
-            <p><span class="bold">Area: </span>insert</p>
-            <p><span class="bold">Population: </span>insert</p>
-            <p><span class="bold">Capital: </span>insert</p>
-            <p><span class="bold">Languages: </span>insert</p>
-            <p><span class="bold">Currency: </span>insert</p>
-            <p><span class="bold">Time Zone: </span>insert</p>
-            <p><span class="bold">Calling Code: </span>insert</p>
-            <p><span class="bold">Internet TLD: </span>insert</p>
+            <p><span class="bold">Area: </span>13,878 sq. km</p>
+            <p><span class="bold">Population: </span>385,640</p>
+            <p><span class="bold">Capital: </span>Nassau</p>
+            <p><span class="bold">Languages: </span>English/Bahamian English</p>
+            <p><span class="bold">Currency: </span>Bahamian Dollar</p>
+            <p><span class="bold">Time Zone: </span>EDT</p>
+            <p><span class="bold">Calling Code: </span>+242</p>
+            <p><span class="bold">Internet TLD: </span>.bs</p>
         </section>
 
         <section id="weather-list" class="container">
-            <h2>Weather</h2>
+            <h2>Weather </h2>
             <img src="images/weather.svg" alt="weather" id="weather-svg" width="100">
-            <h3 id="weather-icon">⛅️</h3>
-            <p><span class="bold">Temperature: </span>insert</p>
-            <p><span class="bold">Conditions: </span>insert</p>
-            <p><span class="bold">Wind: </span>insert</p>
+            <h3 id="weather-icon"></h3>
+            <p><span class="bold">Temperature: </span><span id="temperature">85</span>&deg;F</p>
+            <p><span class="bold">Conditions: </span>Breezy</p>
+            <p><span class="bold">Wind: </span><span id="wind-speed">17</span> mph</p>
             <p><span class="bold">Wind Chill: </span><span id="wind-chill"></span>°F</p>
         </section>
 
