--- a/place.html
+++ b/place.html
@@ -7,6 +7,9 @@
     <title>WDD 131 | Place | Gage Carter</title>
     <meta name="description" content="WDD131 Place Page by Gage Carter">
     <meta name="author" content="Gage Carter">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/place.css">
     <script src="scripts/place.js" defer></script>
 </head>
@@ -41,7 +44,6 @@
         <section id="weather-list" class="container">
             <h2>Weather </h2>
             <img src="images/weather.svg" alt="weather" id="weather-svg" width="100">
-            <h3 id="weather-icon"></h3>
             <p><span class="bold">Temperature: </span><span id="temperature">85</span>&deg;F</p>
             <p><span class="bold">Conditions: </span>Breezy</p>
             <p><span class="bold">Wind: </span><span id="wind-speed">17</span> mph</p>
