--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -14,85 +14,29 @@
 <body>
 
     <header>
-
         <h1>Temple Album</h1>
-
-        <div class="container" onclick="myFunction(this)">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
+        <div class="hamburger-menu" id="hamburger-menu">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
         </div>
-
-        <nav>
-            <a href="#">Home</a>
-            <a href="#" target="_blank">Old</a>
-            <a href="#" target="_blank">New</a>
-            <a href="#" target="_blank">Large</a>
-            <a href="#" target="_blank">Small</a>
+        <nav id="nav-links">
+            <a href="#" id="home">Home</a>
+            <a href="#" id="old">Old</a>
+            <a href="#" id="new">New</a>
+            <a href="#" id="large">Large</a>
+            <a href="#" id="small">Small</a>
         </nav>
-
     </header>
 
     <main>
-
-        <h2>Home</h2>
-
-        <div class="temple-layout">
-
-            <figure>
-                <img src="images/mesa-arizona-temple.jpg" alt="Mesa Arizona Temple">
-                <figcaption>Mesa Arizona Temple</figcaption>
-            </figure>
-
-            <figure>
-                <img src="images/mesa-arizona-temple.jpg" alt="Mesa Arizona Temple">
-                <figcaption>Mesa Arizona Temple</figcaption>
-            </figure>
-
-            <figure>
-                <img src="images/mesa-arizona-temple.jpg" alt="Mesa Arizona Temple">
-                <figcaption>Mesa Arizona Temple</figcaption>
-            </figure>
-
-            <figure>
-                <img src="images/mesa-arizona-temple.jpg" alt="Mesa Arizona Temple">
-                <figcaption>Mesa Arizona Temple</figcaption>
-            </figure>
-
-            <figure>
-                <img src="images/mesa-arizona-temple.jpg" alt="Mesa Arizona Temple">
-                <figcaption>Mesa Arizona Temple</figcaption>
-            </figure>
-
-            <figure>
-                <img src="images/mesa-arizona-temple.jpg" alt="Mesa Arizona Temple">
-                <figcaption>Mesa Arizona Temple</figcaption>
-            </figure>
-
-            <figure>
-                <img src="images/mesa-arizona-temple.jpg" alt="Mesa Arizona Temple">
-                <figcaption>Mesa Arizona Temple</figcaption>
-            </figure>
-
-            <figure>
-                <img src="images/mesa-arizona-temple.jpg" alt="Mesa Arizona Temple">
-                <figcaption>Mesa Arizona Temple</figcaption>
-            </figure>
-
-            <figure>
-                <img src="images/mesa-arizona-temple.jpg" alt="Mesa Arizona Temple">
-                <figcaption>Mesa Arizona Temple</figcaption>
-            </figure>
-
-        </div>
-
+        <h2 id="main-title">Home</h2>
+        <div class="temple-layout" id="temple-layout" loading="lazy"></div>
     </main>
 
     <footer>
-
         <p>&copy; <span id="currentyear"></span> - Gage Carter - Temples</p>
         <p id="lastModified"></p>
-
     </footer>
 
 </body>
