site plan update

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -30,12 +30,25 @@
 
     <section>
         <h2>Color Scheme</h2>
-        <div style="display: flex; gap: 10px;">
-            <div style="width: 50px; height: 50px; background-color: #1E90FF;"></div> <!-- Blue -->
-            <div style="width: 50px; height: 50px; background-color: #FFD700;"></div> <!-- Gold -->
-            <div style="width: 50px; height: 50px; background-color: #32CD32;"></div> <!-- Lime Green -->
-            <div style="width: 50px; height: 50px; background-color: #FF4500;"></div> <!-- Orange Red -->
-            <div style="width: 50px; height: 50px; background-color: #8A2BE2;"></div> <!-- Blue Violet -->
+        <div class="color-box">
+            <div style="background-color: #1E90FF;"></div>
+            <p>Blue - Used for the header and footer background.</p>
+        </div>
+        <div class="color-box">
+            <div style="background-color: #FFD700;"></div>
+            <p>Gold - Used for header/footer text.</p>
+        </div>
+        <div class="color-box">
+            <div style="background-color: #32CD32;"></div>
+            <p>Lime Green - Used for quiz background</p>
+        </div>
+        <div class="color-box">
+            <div style="background-color: #FF4500;"></div>
+            <p>Orange Red - Used for secondary colors.</p>
+        </div>
+        <div class="color-box">
+            <div style="background-color: #8A2BE2;"></div>
+            <p>Blue Violet - Used for the quiz answer options and as a secondary color.</p>
         </div>
     </section>
 
