--- a/project/trivia_master.html
+++ b/project/trivia_master.html
@@ -90,7 +90,7 @@
     </main>
 
     <footer class="site-footer">
-        <p>&copy; 2024 WDD 131 Trivia Master</p>
+        <p>&copy; 2024 WDD 131 | Gage Carter | Trivia Master</p>
     </footer>
 </body>
 </html>
