--- a/project/trivia_study.html
+++ b/project/trivia_study.html
@@ -72,7 +72,7 @@
     </main>
 
     <footer class="site-footer">
-        <p>&copy; 2024 WDD 131 Trivia Master</p>
+        <p>&copy; 2024 WDD 131 | Gage Carter | Trivia Master Study</p>
     </footer>
 </body>
 </html>
