--- a/project/trivia_quiz.html
+++ b/project/trivia_quiz.html
@@ -111,7 +111,7 @@
     </main>
 
     <footer class="site-footer">
-        <p>&copy; 2024 WDD 131 Trivia Master</p>
+        <p>&copy; 2024 WDD 131 | Gage Carter | Trivia Master Quiz</p>
     </footer>
 
 </body>
