--- a/project/trivia_master.html
+++ b/project/trivia_master.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 Trivia Master</title>
+    <meta name="description" content="WDD 131 Final Project, Leaderboard/Home Page | Gage Carter">
+    <meta name="author" content="Gage Carter">
     <link href="https://fonts.googleapis.com/css2?family=Chewy&family=Comic+Sans+MS&family=Luckiest+Guy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/trivia_master.css">
     <script src="scripts/trivia_master.js" defer></script>
