--- a/project/trivia_quiz.html
+++ b/project/trivia_quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trivia Quiz</title>
-    <meta name="description" content="WDD 131 Final Project, Trivia Page | Gage Carter">
+    <meta name="description" content="WDD 131 Final Project, Quiz Page | Gage Carter">
     <meta name="author" content="Gage Carter">
     <link href="https://fonts.googleapis.com/css2?family=Chewy&family=Comic+Sans+MS&family=Luckiest+Guy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/trivia_master.css">
